--- a/app/assets/stylesheets/servers.scss
+++ b/app/assets/stylesheets/servers.scss
@@ -24,6 +24,7 @@
     overflow: scroll;
     -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
     scrollbar-width: none; /* Hide scrollbar for Firefox */
+    z-index: 10;
 }
 
 .servers::-webkit-scrollbar { /* hide scrollbar for Chrome, Safari, and Opera */
@@ -71,6 +72,7 @@
     width: 250px;
     height: 52px;
     margin-left: 72px;
+    z-index: 11;
 }
 
 .footer-button {
